# enlighted

./: .gitignore  Dockerfile  LICENSE  README.md  analytics.ipynb  analytics.ipynb.save  ansible_inventory.yml  ansible_playbook.yml  ansible_playbook_configure_vm.yml  ansible_playbook_deploy.yml  docker-compose.yml  ha_configuration.yaml  home-network.md  init.sql  nginx.conf  setup.cfg
backend/: Dockerfile  docker-compose.yml  env  setup.cfg
backend/enlighted/: db.py  utils.py
backend/enlighted/api/: run_api.py
backend/enlighted/apis/: run_api.py
backend/enlighted/oauth2/: callback.py  models.py  oauth2.py
backend/enlighted/oauth2/homeconnect/: config.py  oauth2.py  run_api.py  run_auth_agent.py
backend/enlighted/oauth2/netatmo/: config.py  oauth2.py  run_api.py  run_auth_agent.py
backend/enlighted/oauth2/nibe/: config.py  oauth2.py  run_api.py  run_auth_agent.py
backend/enlighted/pipelines/_mappings/: F1255PCv2.json
backend/enlighted/pipelines/api2bronze/: a2b_etl.py  base_etl.py
backend/enlighted/pipelines/api2bronze/nibe/: run.py  (+2 more)
backend/enlighted/pipelines/bronze2silver/: b2s_etl.py  models.py
backend/enlighted/pipelines/silver2gold/: energy_consumption_model.py  heat_pump_operating_hours_prices.py  models.py
backend/minimal_footprint/: db.py  etl.py
backend/minimal_footprint/integrations/enphase/: oauth2.py  run_api.py  run_auth_agent.py
backend/minimal_footprint/integrations/homeconnect/: config.py  oauth2.py  run_api.py  run_auth_agent.py  run_etl.py
backend/minimal_footprint/integrations/nibe/: curve.py  heat_curves.json  run_api.py  run_etl.py
backend/minimal_footprint/integrations/tibber/: config.py  models.py  run_api.py  run_stream.py
backend/minimal_footprint/oauth2/: oauth2.py
(+192 files in other folders)
