[metadata]
name = minimal_footprint
version = 0.0.1
description = Minimal Footprint

[options]
packages = find:
packages_dir =
    =.
install_requires =
    fastapi>=0.103.0
    uvicorn>=0.23.2
    requests>=2.31.0
    pandas>=2.0.3
    pydantic_settings>=2.0.3
    sqlalchemy>=2.0.21
    pyjwt>=2.8.0
    sseclient-py>=1.8.0
    psycopg2-binary>=2.9.9