[metadata]
name = minimal_footprint
version = 0.0.1
description = Minimal Footprint

[options]
packages = find:
packages_dir =
    =.
install_requires =
    fastapi>=0.103.0
    uvicorn>=0.23.2
    requests>=2.31.0
    pandas>=2.0.3
    pydantic_settings>=2.0.3
    sqlalchemy>=2.0.21
    pyjwt>=2.8.0
    sseclient-py>=1.8.0
    psycopg2-binary>=2.9.9
    scheduler>=0.8.4
    pyTibber>=0.28.2
    redis>=5.0.1

[flake8]
max-line-length = 90

[pycodestyle]
max-line-length = 90
ignore = E203

[mypy]
plugins = pydantic.mypy

follow_imports = silent
warn_redundant_casts = True
warn_unused_ignores = True
disallow_any_generics = True
check_untyped_defs = True
no_implicit_reexport = True
disallow_untyped_defs = True

[pydantic-mypy]
init_forbid_extra = True
init_typed = True
warn_required_dynamic_aliases = True